# spbot

./: .envrc  README.md  flake.nix  pyproject.toml
exploration/: 00-quickstart.ipynb  01-nist-sps.ipynb
spbot/: common.py  csrc_api.py  documents.py
