[tool.poetry]
name = "spbot"
version = "0.1.0"
description = ""
authors = ["Nikita Wootten <me@nikita.computer>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.16"
langchain-community = "^0.0.32"
pypdf = "^4.2.0"
faiss-cpu = "^1.8.0"
lxml = "^5.2.1"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
notebook = "^7.1.2"
black = "^24.4.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
